# Yoursb-code

./: Cargo.toml
.cargo/: config.toml
embedded-yoursb-code/: Cargo.toml  build.rs  c_deps.h
embedded-yoursb-code/.cargo/: config
embedded-yoursb-code/.yoursbcode/: key
embedded-yoursb-code/.yoursbcode/passwords/: ab
embedded-yoursb-code/src/: crypto.rs  key.rs  main.rs  project.rs  utils.rs
src/: crypto.rs  errors.rs  key.rs  main.rs  passwords.rs  project.rs
yoursb-code/: Cargo.toml
yoursb-code/embedded_execs/: linux
yoursb-code/src/: cli_ctx.rs  crypto.rs  errors.rs  key.rs  main.rs  passwords.rs  project.rs  repo.rs
yoursb-desktop/: Cargo.toml
yoursb-desktop/src/: main.rs
yoursb-desktop/src/views/: home.rs
yoursb-domain/: Cargo.toml  README.md
yoursb-domain/src/: commands.rs  crypto.rs  interfaces.rs  lib.rs  testing.rs
yoursb-domain/tests/instances/basic/pass/: hello
