[package]
name = "yoursb_code"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.10", features = ["stream"] }
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.2"
rand = "0.8.5"
