[workspace]
resolver = "2"

members = [
    "yoursb-code",
    "embedded-yoursb-code", "yoursb-domain",
]

[profile.embedded-dev]
inherits = "dev"
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.embedded]
inherits = "release"
opt-level = "z"     # Optimize for size. "s" might be better in some cases
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
