[package]
name = "yoursb-code_tiny"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.10", default-features = false, features = ["stream", "heapless"] }
libc = { version = "0.2", default-features = false }
errno = {version = "0.3.3", default-features = false}
serde = { version = "1", default-features = false }
serde-json-core = { version = "0.5", default-features = false, features = ["custom-error-messages"] }

[build-dependencies]
bindgen = "0.65"
cmake = "0.1"

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.