[package]
name = "yoursb-code-tiny"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.10", default-features = false, features = ["stream", "heapless"] }
libc = { version = "0.2", default-features = false }
errno = {version = "0.3.3", default-features = false }
serde = { version = "1", default-features = false }
serde-json-core = { version = "0.5", default-features = false, features = ["custom-error-messages"] }

[target.'cfg(unix)'.dependencies]
# x11rb = "=0.13.1"
x11-clipboard = "0.9.3"

[target.'cfg(windows)'.dependencies]
windows = "0.58.0"
