[package]
name = "yoursb-code"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = { version = "0.10", features = ["stream"] }
clap = { version = "4.4", features = ["derive"] }
rpassword = "7.2"
rand = "0.8.5"
dirs = "5.0"
arboard = "3.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[[bin]]
name = "ysbc"
path = "src/main.rs"
