[package]
name = "yoursb-domain"
version = "0.3.0"
edition = "2021"

[dependencies]
getrandom = "0.2.15"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["stream", "heapless"] }
argon2 = "0.5.3"

[features]
std = []
default = ["std"]